# ttsnake

./: .gitignore  AUTHORS  Makefile.am  README  README.md  autogen.sh  configure.ac
doc/: CONTRIBUTING.md
scenes/: Makefile.am
scenes/game/: scene-0000001.txt  scene-0000002.txt  scene-0000003.txt
src/: Makefile.am  textronsnake.c  ttsnake.c  utils.c  utils.h
