##   Automake.am - Automake script
##
##   Copyright (c) 2021 - TTSnake (https://github.com/courselab/ttsnake)
##
##   This file is part of TexTronSnake
##
##   TexTronSnake is free software: you can redistribute it and/or modify
##   it under the terms of the GNU General Public License as published by
##   the Free Software Foundation, either version 3 of the License, or
##   (at your option) any later version.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public License
##   along with this program.  If not, see <http://www.gnu.org/licenses/>.



textronsnake_introdir = $(datadir)/textronsnake/intro

include $(srcdir)/intro.am
dist_textronsnake_intro_DATA = $(intro_scenes)

textronsnake_gamedir = $(datadir)/textronsnake/game
dist_textronsnake_game_DATA = game/scene-0000001.txt


